[gd_scene load_steps=4 format=3 uid="uid://doppwt42le0nf"]

[ext_resource type="Texture2D" uid="uid://dhkctqajvwr04" path="res://calendar/assets/left-arrow.png" id="1_4nh6m"]
[ext_resource type="Script" path="res://calendar/calendar.gd" id="1_8psj8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ifurh"]

[node name="Calendar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8psj8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.332881, 0.332881, 0.332881, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("1_4nh6m")
expand_mode = 1

[node name="previousMonthButton" type="Button" parent="VBoxContainer/MarginContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ifurh")

[node name="MonthYearLabel" type="Label" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "December 2024"

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("1_4nh6m")
expand_mode = 1
flip_h = true

[node name="nextMonthButton" type="Button" parent="VBoxContainer/MarginContainer/TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ifurh")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ifurh")

[node name="ColumnsBox" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ColumnsBox"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Label" type="Label" parent="VBoxContainer/ColumnsBox/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 20
text = "Mon"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/ColumnsBox"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Label" type="Label" parent="VBoxContainer/ColumnsBox/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 20
text = "Tue"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/ColumnsBox"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Label" type="Label" parent="VBoxContainer/ColumnsBox/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 20
text = "Wed"

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/ColumnsBox"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Label" type="Label" parent="VBoxContainer/ColumnsBox/VBoxContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 20
text = "Thu"

[node name="VBoxContainer5" type="VBoxContainer" parent="VBoxContainer/ColumnsBox"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Label" type="Label" parent="VBoxContainer/ColumnsBox/VBoxContainer5"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 20
text = "Fri"

[node name="VBoxContainer6" type="VBoxContainer" parent="VBoxContainer/ColumnsBox"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Label" type="Label" parent="VBoxContainer/ColumnsBox/VBoxContainer6"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 20
text = "Sat"

[node name="VBoxContainer7" type="VBoxContainer" parent="VBoxContainer/ColumnsBox"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Label" type="Label" parent="VBoxContainer/ColumnsBox/VBoxContainer7"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 20
text = "Sun"

[connection signal="pressed" from="VBoxContainer/MarginContainer/TextureRect/previousMonthButton" to="." method="_on_previous_month_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/TextureRect2/nextMonthButton" to="." method="_on_next_month_button_pressed"]
